# mdofs

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
fsproto/: CMakeLists.txt  directory.proto  inode.proto
simplefs/: CMakeLists.txt
simplefs/code/: CMakeLists.txt
simplefs/code/include/: auxilliary.h  common.h  creat.h  handle-management.hpp  locking.h  lseek.h  mkdir.h  open.h  opendir.h  proto-helpers.hpp  read.h  unlink.h  write.h
simplefs/code/src/: auxilliary.cpp  creat.cpp  handle-management.cpp  locking.cpp  lseek.cpp  mkdir.cpp  open.cpp  opendir.cpp  proto-helpers.cpp  read.cpp  shared-vars.cpp  unlink.cpp  write.cpp
utils/cat/app/: CMakeLists.txt
utils/cat/app/src/: main.cpp
utils/fsize/: CMakeLists.txt
utils/fsize/app/: CMakeLists.txt
utils/fsize/app/src/: main.cpp
utils/init/app/: CMakeLists.txt
utils/init/app/include/: init.hpp
utils/init/app/src/: init.cpp  main.cpp
utils/init/test/: CMakeLists.txt
utils/init/test/src/: InitTest.cpp
utils/ls/app/: CMakeLists.txt
utils/ls/app/src/: main.cpp
utils/manual-tests/scripts/: env_vars.sh  init_test.sh  mkdir_ls_test.sh  mkfile_cat_fsize_test.sh  mkfile_test.sh  multiprocessing_test.sh  rm_test.sh  run_all_tests.sh  setup_test_env.sh
utils/manual-tests/test-files/: init  ls  mkdir
utils/mkdir/app/: CMakeLists.txt
utils/mkdir/app/src/: main.cpp
utils/mkfile/app/: CMakeLists.txt
utils/mkfile/app/src/: main.cpp
utils/rm/app/: CMakeLists.txt
utils/rm/app/src/: main.cpp
