set(PROTO_DEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/generated/)
set(PROTO_SRC_FILENAMES directory inode)

# helper lists
list(TRANSFORM PROTO_SRC_FILENAMES APPEND ".proto" OUTPUT_VARIABLE PROTO_SOURCES)
list(TRANSFORM PROTO_SRC_FILENAMES APPEND ".pb.h" OUTPUT_VARIABLE PROTO_GEN_HEADERS)
list(TRANSFORM PROTO_SRC_FILENAMES APPEND ".pb.cc" OUTPUT_VARIABLE PROTO_GEN_SOURCES)
set(PROTO_GENERATED ${PROTO_GEN_HEADERS} ${PROTO_GEN_SOURCES})

list(TRANSFORM PROTO_GENERATED PREPEND ${PROTO_DEST_DIR} OUTPUT_VARIABLE PROTO_GEN_PATHS)
list(TRANSFORM PROTO_GEN_SOURCES PREPEND ${PROTO_DEST_DIR} OUTPUT_VARIABLE PROTO_GEN_SOURCES_PATHS)

add_custom_command(
        OUTPUT ${PROTO_GEN_PATHS}
        COMMAND protoc -I${CMAKE_CURRENT_SOURCE_DIR} --cpp_out=${PROTO_DEST_DIR} ${PROTO_SOURCES}
        MAIN_DEPENDENCY ${PROTO_SOURCES}
        COMMENT "Generating protocol files"
        COMMAND_EXPAND_LISTS
)

add_library(protocols ${PROTO_GEN_SOURCES_PATHS})

target_link_libraries(protocols protobuf-lite)
